# nixos-setup

./: Cargo.toml  README.md
src/: cli.rs  disk.rs  env.rs  error.rs  filesystem.rs  filesystems.rs  gpt.rs  hardware.rs  initramfs.rs  install.rs  luks.rs  lvm.rs  main.rs  partition.rs  partitioning.rs  secrets.rs  ssh.rs  traits.rs  utils.rs  zfs.rs
tests/: .env  test-env  test-filesystems  test-hardware  test-install  test-luks  test-partitioning  test-secrets
tests/filesystems/test-ext4/: default.nix  devices.nix  filesystems.nix
tests/filesystems/test-real/: devices.nix  filesystems.nix
tests/filesystems/test-zfs/: bootloader.nix  devices.nix  filesystems.nix
tests/hardware/brand/model/: hardware-name.nix
tests/layouts/: test-ext4.in.json  test-ext4.json  test-real.in.json  test-real.json  test-zfs.in.json  test-zfs.json
