[package]
name = "nixos-setup"
version = "1.0.0"
authors = ["Mathieu Hardy <mhardy2008@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
env_logger = "0.7"
log = "0.4.14"
mktemp = "0.4.1"
regex = "1"
rust-argon2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

#rand = "0.8.3"
#rand_core = "0.6.2"
#rand_chacha = "0.3.0"
#rsa = "0.4.0"
